src/component/HeaderLogo/HeaderLogo.style.scss
.HeaderLogo {
  flex: 1;
  height: 40px;
  text-align: center;
  margin: 0 200px;

  @include before-desktop {
    height: auto;
  }

  .Image {
    height: 22px;
    width: 30%;

    @include before-desktop {
      display: block;
      padding: 0;
      margin-left: calc(35% + 30px);
      margin-right: calc(35% - 30px);
    }
    @include desktop {
      height: 40px;
      margin-top: 0;
      padding: 0;
      width: 190px;
    }
  }
}

